# st-fuel-logbook

./: .copier-answers.yml  .gitignore  .project-words.txt  README.md  app.py  bulk.py  codecov.yml  constants.py  home.py  new_car.py  pyproject.toml  stats.py
.github/: pr-labeler.yml
.github/workflows/: lint.yml  tests.yml
.streamlit/: config.toml
assets/: banner.drawio
components/: __init__.py  auth.py  coffee.py  logo.py  user.py
db/: __init__.py  client.py  model.py  validations.py
db/crud/: __init__.py  bulk.py  create.py  read.py
old/: db.py  graphs.py
pages/: bulk.py  home.py  new_car.py  stats.py
static/: template.xlsx
tests/: conftest.py  test_bulk.py  test_components.py  test_create_user.py  test_crud_car.py  test_db.py  test_palette.py  test_umami.py
utils/: __init__.py  bulk_upload.py  db.py  graphs.py  model.py  palette.py  stats.py  template.py  types.py  umami.py
utils/bulk/: template.py  types.py
utils/stats/: __init__.py  base.py  efficiency_distribution.py  efficiency_over_time.py  rolling_cost_per_km.py
