[project]
name = "fuel_logbook"
version = "0.1.0"
description = "A Streamlit App to help you keep track of your fuel usage over time"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.52.0,<2.0.0",
    "Authlib>=1.6.9,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "requests>=2.32.5,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "cachetools>=6.2.0,<7.0.0",
    "SQLAlchemy>=2.0.48,<3.0.0",
    "plotly>=6.6.0,<7.0.0",
    "pytz",
    "loguru",
]

# uv sync --dev
[dependency-groups]
lint = ["pre-commit"]
test = ["pytest", "pytest-cov", "pytest-pretty"]
dev = [{ include-group = "test" }, { include-group = "lint" }]
